# v8-cpp-playground

./: .gitignore  CMakeLists.txt  build.sh  preConfiguration.h.in  vcpkg_rf.txt
cmake/: ConfigureBuildType.cmake  DetectAndConfigurePlatform.cmake
src/: Application.hpp  BuildConfig.hpp  CMakeLists.txt  ConsoleApplication.hpp  EngineMain.cpp  EngineMain.hpp  Manager.hpp  Quality.hpp  Queue.hpp  Singleton.hpp  Unistd.hpp  WindowsStandard.hpp
src/event/: EventDefinitions.hpp  EventHelper.hpp  EventManager.cpp  EventManager.hpp  KeyVirtualCodes.hpp  ThrownEvent.hpp  TimerEntryInfo.hpp
src/resource/: DataManager.hpp  GlobalObjectRegistry.hpp  ManagedDataFile.hpp  ManagedObject.hpp  Resource.hpp  ResourceConfig.hpp  ResourceConfigJson.hpp  ResourceManager.cpp  ResourceManager.hpp  ZipFileResource.hpp
src/script/: InternalModule.hpp  Module.hpp  ScriptCallback.hpp  ScriptManager.cpp  ScriptManager.hpp  ScriptResource.hpp  V8.cpp  V8.hpp
src/script/modules/: Console.cpp  Console.hpp  Events.cpp  Events.hpp  Resources.cpp  Resources.hpp  Timers.cpp  Timers.hpp
src/util/: AbstractFactory.hpp  Bindings.hpp  BindingsJson.hpp  BitField.hpp  CallbackHelper.hpp  Callbacks.hpp  Dirent.cpp  Dirent.hpp  EnumFlags.hpp  EnumName.hpp  File.cpp  File.hpp  FileBase.hpp  FpsControl.hpp  GlobalObjectRegistry.hpp  Handle.hpp  HandleConvert.hpp  HandleManager.hpp  JsonFile.hpp  Logger.cpp  Logger.hpp  NamedHandle.hpp  Profiling.cpp  Profiling.hpp  RegularFile.cpp  RegularFile.hpp  SimpleThread.cpp  SimpleThread.hpp  Tag.hpp  UniversalId.hpp  UnpackCaller.hpp  Util.cpp  Util.hpp  Vector.hpp  ZipFile.cpp  ZipFile.hpp  timesys.cpp  timesys.hpp
tests/: CMakeLists.txt  bindings.cpp  events.cpp  test-bindings.cpp  test-bitfields.cpp  test-events.cpp  timers.cpp
